--- a/src/views/popup.css
+++ b/src/views/popup.css
@@ -1,4 +1,5 @@
 .discovery-view-popup {
+    all: reset;
     position: fixed;
     min-width: 200px;
     box-sizing: border-box;
@@ -9,6 +10,9 @@
     border: 1px solid #ccc;
     box-shadow: 3px 3px 18px rgba(0,0,0,.2);
     background: white;
+    font-family: Tahoma, Verdana, Arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.6;
 }
 
 .discovery-view-popup.show-on-hover:not([data-pin-mode="popup-hover"]):not(.pinned) {
