Some changes to simplify embed mode
- Changed `App#render()` and `Widget#render()` methods to return a render state promise
- Changed `PageRenderer#render()` method to return `{ pageEl, renderState }` object instead of just `newPageEl`
- Added optional parameter for `Widget` constructor to specify default page layout, i.e. `new Widget(container, defaultPage, options)`
- Added `extensions` and `compact` options to `Widget`/`App` constructor, i.e. `new Widget(el, null, { extensions, compact })`

--- a/src/widget/widget.css
+++ b/src/widget/widget.css
@@ -13,6 +13,10 @@
     z-index: 10;
 }
 
+.discovery-content .page {
+    padding-top: 15px;
+}
+
 .discovery-sidebar {
     overflow: auto;
     width: 350px;
@@ -90,4 +94,9 @@
 .discovery[data-dzen] .discovery-sidebar,
 .discovery[data-dzen] .discovery-content-badges {
     display: none;
+}
+
+.discovery[data-compact] .discovery-content,
+.discovery[data-compact] .page {
+    padding: 0;
 }
