Fix extra large height for editors in quirk mode

--- a/src/views/editors.css
+++ b/src/views/editors.css
@@ -15,6 +15,7 @@
 }
 .discovery-editor .CodeMirror-scroll {
     min-height: 6.5em;
+    height: auto;
     overflow-y: visible !important;
     cursor: text;
 }
