--- a/src/views/badges.css
+++ b/src/views/badges.css
@@ -28,23 +28,23 @@
     padding: 1px 6px 3px;
     margin: -1px 6px -3px -6px;
     border-radius: 3px 0 0 3px;
-    background-image: linear-gradient(to top, rgba(0, 0, 0, .12), rgba(0, 0, 0, .12));
+    background-color: rgba(0, 0, 0, .12);
 }
 .view-badge > .postfix {
     padding: 1px 6px 3px;
     margin: -1px -6px -3px 6px;
     border-radius: 0 3px 3px 0;
-    background-image: linear-gradient(to top, rgba(0, 0, 0, .12), rgba(0, 0, 0, .12));
+    background-color: rgba(0, 0, 0, .12);
 }
 .view-pill-badge > .prefix {
     padding: 1px 6px 3px;
     margin: -1px 6px -3px -6px;
     border-radius: 8px 0 0 8px;
-    background-image: linear-gradient(to top, rgba(0, 0, 0, .12), rgba(0, 0, 0, .12));
+    background-color: rgba(0, 0, 0, .12);
 }
 .view-pill-badge > .prefix {
     padding: 1px 6px 3px;
     margin: -1px -6px -3px 6px;
     border-radius: 0 8px 8px 0;
-    background-image: linear-gradient(to top, rgba(0, 0, 0, .12), rgba(0, 0, 0, .12));
+    background-color: rgba(0, 0, 0, .12);
 }
