--- a/src/views/signature.css
+++ b/src/views/signature.css
@@ -34,10 +34,11 @@
     border-radius: 3px;
     cursor: pointer;
 }
-.view-signature [data-action][data-enabled=true] {
-    color: #666;
-    background: #f0f0f0;
-    border-color: #e0e0e0;
+.view-signature [data-action][data-enabled=true],
+.view-signature [data-action][data-enabled=true]:hover {
+    color: #686;
+    background: #e5f7e5;
+    border-color: #d0e0d0;
 }
 .view-signature [data-action="collapse"]::before {
     content: "–";
