--- a/src/widget/widget.css
+++ b/src/widget/widget.css
@@ -36,6 +36,9 @@
     flex-direction: column;
     max-height: 100%;
 }
+.discovery-sidebar .view-tabs {
+    height: 100%;
+}
 .discovery-sidebar .view-content-filter > .view-input {
     border-bottom: 1px solid #DDD;
     background: white;
