--- a/src/pages/report/editor-view.css
+++ b/src/pages/report/editor-view.css
@@ -28,7 +28,7 @@
     width: 30px;
     height: 30px;
     font-size: 0;
-    background-image: url('./report-formatting.svg');
+    background-image: url('./img/formatting.svg');
     background-repeat: no-repeat;
     background-size: 20px;
     background-position: center;
