--- a/src/pages/report.css
+++ b/src/pages/report.css
@@ -11,8 +11,7 @@
 * Error
 ********************************/
 
-.page-report > .report-editor .report-error,
-.page-report > .report-content > .report-error {
+.page-report > .report-block > .report-block-content > .report-error {
     display: block;
     overflow: hidden;
     border-left: 3px solid #f33;
@@ -23,15 +22,74 @@
     font-family: Consolas, Monaco, monospace;
     font-size: 11px;
 }
-.page-report > .report-editor .report-error::before,
-.page-report > .report-content > .report-error::before {
+.page-report > .report-block > .report-block-content > .report-error::before {
     display: block;
     margin-bottom: .5em;
     font-size: 16px;
 }
-.page-report > .report-editor .query-error::before {
+.page-report > .report-block.query > .report-block-content > .report-error::before {
     content: 'Query error';
 }
-.page-report > .report-content > .render-error::before {
+.page-report > .report-block.view > .report-block-content > .report-error::before {
     content: 'Render error';
+}
+
+/********************************
+* Block
+********************************/
+
+.page-report > .insert-point {
+    margin: 2px 0 2px -33px;
+    max-height: 1px;
+    line-height: 2px;
+    font-size: 10px;
+    background: repeating-linear-gradient(to right, #ddd, #ddd 20px, transparent 20px, transparent 28px) 5px top;
+}
+.discovery[data-dzen] .page-report > .insert-point {
+    visibility: hidden;
+}
+.page-report > .insert-point .view-button {
+    padding: 0 8px;
+    margin: -6px 0;
+    width: 8px;
+    box-sizing: content-box;
+}
+
+.page-report > .report-block {
+    display: grid;
+    grid-template-columns: 40px auto;
+    grid-template-rows: auto;
+    grid-template-areas:
+        'actions editor'
+        'actions content';
+    margin-left: -40px;
+}
+.page-report > .report-block > .report-block-actions {
+    grid-area: actions;
+    display: none;
+    font-size: 10px;
+    padding: 8px 0;
+    text-align: center;
+}
+.page-report > .report-block > .report-block-editor {
+    display: none;
+    grid-area: editor;
+}
+.page-report > .report-block > .report-block-content {
+    grid-area: content;
+}
+
+.page-report > .report-block.editable > .report-block-actions,
+.page-report > .report-block.editable > .report-block-editor {
+    display: block;
+}
+
+.page-report > .report-block > .report-block-actions:hover {
+    background: #eee;
+}
+.page-report > .report-block > .report-block-actions .view-button {
+    padding: 0 8px;
+    width: 8px;
+    box-sizing: content-box;
+    text-align: center;
 }
