Add checkbox-list view

--- a/src/views/index.css
+++ b/src/views/index.css
@@ -2,6 +2,7 @@
 @import url('./badges.css');
 @import url('./block.css');
 @import url('./button.css');
+@import url('./checkbox-list.css');
 @import url('./checkbox.css');
 @import url('./columns.css');
 @import url('./content-filter.css');
