Fix style issue in report page

--- a/src/pages/report/editor-query.css
+++ b/src/pages/report/editor-query.css
@@ -1,5 +1,7 @@
 .page-report > .report-editor .data-query-result {
     margin: 1em 0 1em -40px;
+}
+.page-report > .report-editor .data-query-result > * {
     overflow: hidden;
 }
 .page-report > .report-editor .data-query-result::before {
