--- a/src/pages/report.css
+++ b/src/pages/report.css
@@ -43,7 +43,6 @@
     max-height: 1px;
     line-height: 2px;
     font-size: 10px;
-    background: repeating-linear-gradient(to right, #ddd, #ddd 20px, transparent 20px, transparent 28px) 5px top;
 }
 .discovery[data-dzen] .page-report > .insert-point {
     visibility: hidden;
@@ -70,10 +69,23 @@
     font-size: 10px;
     padding: 8px 0;
     text-align: center;
+    opacity: 0;
 }
 .page-report > .report-block > .report-block-editor {
     display: none;
     grid-area: editor;
+}
+.page-report > .report-block > .report-block-editor::before {
+    background: #ddeed0;
+    font-size: 10px;
+    padding: 2px 8px;
+    color: #6d8a66;
+}
+.page-report > .report-block.query > .report-block-editor::before {
+    content: 'Query';
+}
+.page-report > .report-block.view > .report-block-editor::before {
+    content: 'View';
 }
 .page-report > .report-block > .report-block-content {
     grid-area: content;
@@ -84,6 +96,10 @@
     display: block;
 }
 
+.page-report > .report-block.editable:hover > .report-block-actions,
+.page-report > .report-block.editable:focus-within > .report-block-actions {
+    opacity: 1;
+}
 .page-report > .report-block > .report-block-actions:hover {
     background: #eee;
 }
@@ -92,4 +108,10 @@
     width: 8px;
     box-sizing: content-box;
     text-align: center;
+}
+.page-report > .report-block > .report-block-actions::before {
+    content: 'In [' attr(data-in) ']';
+}
+.page-report > .report-block > .report-block-actions[data-out]::after {
+    content: 'Out [' attr(data-out) ']';
 }
