--- a/src/pages/report/editor-view.css
+++ b/src/pages/report/editor-view.css
@@ -1,5 +1,5 @@
 .page-report > .report-block.view > .report-block-editor {
-    margin: 0 -40px 12px 0;
+    margin-bottom: 12px;
 }
 
 .page-report > .report-block.view > .report-block-editor .report-editor-tabs.view-mode::before {
@@ -17,33 +17,39 @@
 }
 
 .page-report > .report-block.view > .report-block-editor .view-editor-form-content {
-    padding: 8px 40px 8px 0;
-    margin-bottom: 1px;
-    background: #e8f5fd;
     border-radius: 0 4px 4px 4px;
 }
 .page-report > .report-block.view > .report-block-editor .formatting {
-    position: absolute;
+    /* position: absolute;
     right: 5px;
     width: 30px;
-    height: 30px;
+    height: 30px; */
     font-size: 0;
+    background-color: #f8f8f8;
     background-image: url('./img/formatting.svg');
     background-repeat: no-repeat;
     background-size: 20px;
     background-position: center;
-    border-color: #b9d0df;
+    border: none;
+    cursor: pointer;
+}
+.page-report > .report-block.view > .report-block-editor .formatting:hover {
+    background-color: #eee;
+}
+.page-report > .report-block.view > .report-block-editor .formatting:focus {
+    outline: none;
 }
 
-.page-report > .report-block.view > .report-block-editor .view-editor-view-list {
+.page-report > .report-block.view > .report-block-editor .view-list-hint {
+    flex: 1;
     padding-left: 10px;
-    padding-right: 25px;
-    font-size: 12px;
+    padding-right: 10px;
+    font-size: 11px;
     color: #aaa;
 }
-.page-report > .report-block.view > .report-block-editor .view-editor-view-list .item {
-    color: #75a3bf;
-    white-space: nowrap;
+.page-report > .report-block.view > .report-block-editor .view-list-hint span {
+    text-decoration: underline;
+    cursor: pointer;
 }
 
 .discovery[data-dzen] .page-report > .report-block.view > .report-block-editor {
