--- a/src/views/editors.css
+++ b/src/views/editors.css
@@ -1,6 +1,7 @@
 @import url('/node_modules/codemirror/lib/codemirror.css');
 @import url('/node_modules/codemirror/theme/neo.css');
 @import url('./editors-hint.css');
+@import url('./editors-placeholder.css');
 
 .discovery-editor .CodeMirror {
     height: auto;
@@ -11,17 +12,16 @@
     font-size: 12px;
     border: 1px solid #aaa;
     border-radius: 3px;
-    box-shadow: inset 0 1px 1px rgba(142, 142, 142, .2);
+    box-shadow: inset 1px 1px 2px rgba(142, 142, 142, .2);
 }
 .discovery-editor .CodeMirror-scroll {
-    min-height: 6.5em;
     height: auto;
     overflow-y: visible !important;
     cursor: text;
 }
 .discovery-editor .CodeMirror-focused {
     border-color: #0af;
-    box-shadow: 0 0 1px 3px rgba(0, 170, 255, .2), inset 0 1px 1px rgba(142, 142, 142, .2) !important;
+    box-shadow: 0 0 1px 3px rgba(0, 170, 255, .2), inset 0 1px 1px rgba(142, 142, 142, .2);
 }
 .discovery-editor .CodeMirror-cursor {
     border-left: 1px solid black;
