--- a/src/pages/report.css
+++ b/src/pages/report.css
@@ -69,7 +69,7 @@
     font-size: 10px;
     padding: 8px 0;
     text-align: center;
-    opacity: 0;
+    opacity: 1;
 }
 .page-report > .report-block > .report-block-editor {
     display: none;
@@ -111,7 +111,13 @@
 }
 .page-report > .report-block > .report-block-actions::before {
     content: 'In [' attr(data-in) ']';
+    display: block;
+    padding-right: 4px;
+    text-align: right;
 }
 .page-report > .report-block > .report-block-actions[data-out]::after {
     content: 'Out [' attr(data-out) ']';
+    display: block;
+    padding-right: 4px;
+    text-align: right;
 }
